# cuda-lbm

./: .gitignore  ;  CMakeLists.txt  Makefile  README.md  TODO.txt
src/: assert.cuh  defines.hpp  lbm.cu  lbm.cuh  lbm_constants.cuh  lbm_impl.cuh  main.cu  timer.cuh  utility.cu  utility.cuh
src/IBM/: IBMBody.cuh  IBMManager.cuh  IBMUtils.cu  IBMUtils.cuh  IBM_generators.cu  IBM_generators.cuh  IBM_impl.cu  IBM_impl.cuh  IBM_sorting.cuh  IBM_utils.cu
src/IBM/config/: body_config.hpp  config_parser.cpp
src/IBM/geometry/: point.hpp
src/IBM/math/: mat4.hpp
src/IBM/mesh/: mesh.hpp  mesh_io.cpp  mesh_io.hpp  mesh_transformer.cpp  mesh_transformer.hpp
src/IBM/model_sampling/: compile_cmd.txt  init_vertices.csv  main.cpp  points.hpp  sample.hpp  sample_test  sampled_vertices.csv  sampler.cpp  sampler.cu  sampler.hpp  utils.hpp  visualizer.py
src/codegen/: BGK.py  cm_matrix.txt  cm_matrix_inv.py  gen.py  gen.txt  gen3d.py  gen3d.txt
src/codegen/3D-MRT/: M.txt  f_term.txt  f_term_de_rosis_non_orthogonal.txt  forces.py  matrices.py  util.py
src/codegen/CM/: T_inv_symbolic.sympy  gen_omegas.py  k_post.py  remove_parenthesis.py
src/codegen/CM/generated_collision_code/: D3Q27_ACM.gen  D3Q27_CM.gen.old  D3Q27_EMPIRICAL_ACM.gen  acm_collision_operator_3d.cu  cm_collision_operator_3d.cu
src/configs/: poiseuilleConfig.cuh  scenario.cuh  taylorGreenConfig.cuh
src/core/: boundaries.cuh  collision.cuh  equilibrium.cu  init.cuh  lbm.cu  lbm.cuh  lbm_constants.cuh  lbm_impl.cuh  math_constants.cuh
src/core/boundaries/: boundaries.cuh
src/core/collision/: adapters.cuh  collision.cuh
src/core/collision/BGK/: BGK.cuh
src/core/collision/CM/: ACM_D3Q27.cuh  CM.cu  CM.cuh  CM_D3Q27.cuh  E_ACM_D3Q27.cuh
src/core/collision/MRT/: MRT.cu  MRT.cuh  OldMRT.txt
src/core/equilibrium/: equilibrium.cu  equilibrium.cuh
src/core/init/: init.cuh
src/core/macroscopics/: macroscopics.cu  macroscopics.cuh
src/core/streaming/: streaming.cu  streaming.cuh
src/functors/: cylinderBoundary.cuh  defaultBoundary.cuh  defaultInit.cuh  includes.cuh  taylorGreenInit.cuh  zeroGradientOutflow.cuh  zouHeInflow.cuh
src/functors/boundaryConditions/: bbDomainBoundary.cuh  cornerBoundaries.cuh  cylinderBoundary.cuh  edgeCornerBounceBack.cuh  freeOutlet.cuh  guoInlet3D.cuh  guoOutlet3D.cuh  pressureOutlet.cuh  regularizedBounceBack.cuh  regularizedBoundary3D.cuh  regularizedInlet.cuh  regularizedOutlet.cuh  zeroGradientOutflow.cuh  zouHeInflow.cuh
src/functors/initialConditions/: defaultInit.cuh  poiseuilleInit.cuh  taylorGreenInit.cuh
src/graphics/: expensive_visualize.py  particle_field.py  plot_midplane.py  visualize.py
src/scenarios/: scenario.cuh
src/scenarios/flowPastCylinder/: flowPastCylinderFunctors.cuh  flowPastCylinderScenario.cuh
src/scenarios/flowPastSquareCylinder/: flowPastSquareCylinderFunctors.cuh  flowPastSquareCylinderScenario.cuh  sphere_config.ini  square_cylinder_config.ini
src/scenarios/lidDrivenCavity/: lidDrivenCavityFunctors.cuh  lidDrivenCavityScenario.cuh
src/scenarios/lidDrivenCavity2D/: lidDrivenCavityFunctors.cuh  lidDrivenCavityScenario.cuh
src/scenarios/poiseuille/: poiseuilleFunctors.cuh  poiseuilleScenario.cuh
src/scenarios/taylorGreen/: taylorGreenFunctors.cuh  taylorGreenScenario.cuh
src/scenarios/taylorGreen2D/: taylorGreenFunctors.cuh  taylorGreenScenario.cuh
src/scenarios/taylorGreen3D/: taylorGreen3DFunctors.cuh  taylorGreen3DScenario.cuh
src/scenarios/taylorGreen3D/postprocessing/: kineticEnergy.cuh
src/scenarios/turbulentChannel/: sphere_body_config.ini  turbulentChannelFunctors.cuh  turbulentChannelScenario.cuh
src/scenarios/windTest/: sphere_config.ini  windTestScenario.cuh
src/scenarios/zeroFlow/: sphere_config.ini  zeroFlowScenario.cuh
src/util/: timer.cuh  utility.cu  utility.cuh
